--- a/frontend/static/scss/partials/_chessboard.scss
+++ b/frontend/static/scss/partials/_chessboard.scss
@@ -231,10 +231,14 @@
 
 .annot-brilliant { color: #26c2a3; }
 .annot-great { color: #5c8bb0; }
+.annot-best { color: #2ef771; }
 .annot-good { color: #95b806; }
 .annot-book { color: #d5a47d; }
+.annot-solid { color: #8b90a1; }
+.annot-inacc { color: #f4c430; }
 .annot-mistake { color: #ffa459; }
 .annot-blunder { color: #fa412d; }
+.annot-miss { color: #fb41ac; }
 
 #arrow-container {
     position: absolute;
